--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -2,8 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:title="Home" />
+        android:title="@string/menu_home" />
     <item
         android:id="@+id/reset"
-        android:title="Reset" />
+        android:title="@string/menu_reset" />
+    <item
+        android:id="@+id/save"
+        android:title="@string/menu_save" />
 </menu>
