--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,48 +4,68 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:background="@color/game_background"
+    android:padding="32dp"
     tools:context="com.example.android.egyptianratscrew.HomeActivity">
 
     <TextView
+        android:id="@+id/title_tv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="@string/app_name"
-        android:textSize="40sp" />
+        android:layout_marginTop="100dp"
+        android:text="Egyptian"
+        android:textSize="@dimen/font_size_title" />
+
+    <TextView
+        android:id="@+id/title_tv_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title_tv_1"
+        android:text="Rat"
+        android:textSize="@dimen/font_size_title" />
+
+    <TextView
+        android:id="@+id/title_tv_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title_tv_2"
+        android:text="Screw"
+        android:textSize="@dimen/font_size_title" />
 
     <ImageView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/rat" />
+        android:layout_centerHorizontal="true" />
 
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="150dp"
-        android:onClick="newGame"
-        android:text="@string/new_game" />
+        android:layout_below="@id/title_tv_3"
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
-        android:onClick="continueGame"
-        android:text="@string/continue_game" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button"
+            android:onClick="newGame"
+            android:text="@string/new_game" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
-        android:onClick="about"
-        android:text="@string/about_game" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button"
+            android:onClick="continueGame"
+            android:text="@string/continue_game" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:onClick="about"
+            android:text="@string/about_game" />
+
+    </LinearLayout>
 
 </RelativeLayout>
