--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="game_background">#fff8f0</color>
     <color name="dark_grey">#696969</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
