--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="card_width">150dp</dimen>
     <dimen name="card_height">220dp</dimen>
-    <dimen name="font_size_slap">60sp</dimen>
+    <dimen name="font_size_slap">55sp</dimen>
     <dimen name="font_size_num_cards">40sp</dimen>
     <dimen name="font_size_title">70sp</dimen>
     <dimen name="button_size">100dp</dimen>
+    <dimen name="home_image_size">100dp</dimen>
 </resources>
