--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="game_background">#fff8f0</color>
-    <color name="dark_grey">#696969</color>
+    <color name="dark_grey">#444444</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="card_color">#fff8f0</color>
 </resources>
